fixed padding on p tags and author name on mobile screens

--- a/css/_mediaQueries.scss
+++ b/css/_mediaQueries.scss
@@ -158,7 +158,10 @@
     .article-inner-wrapper{
       padding: 18px 0;
       .article-text-block{
-        h1, h2, h3, h4, h5, p, pre {
+        p, pre {
+          padding: 1px 40px 3px 10px;
+        }
+        h1, h2, h3, h4, h5{
           padding: 3px 40px 3px 10px;
         }
       }
@@ -167,7 +170,10 @@
   #back2top{
     right: 0;
   }
-
+  #view-page > div > div:nth-child(2) > div > div:nth-child(1) > a > article > div.b-desc > span.type-author.ng-binding{
+    float: none;
+    margin-right: 0;
+  }
 }
 
 
